13-CAMH-Specialized_Compute_Cluster_Files/Output Files-Sept12/modelling-LSTM-rawvoxels2.out
  File "modelling-LSTM-rawvoxels.py", line 96
    print(f"Fold: {i}")
                     ^
SyntaxError: invalid syntax
